# QT_Projects

QT6/QT6_Pro/: CMakeLists.txt  README.md
QT6/QT6_Pro/install/: .setup.bash
QT6/QT6_Pro/install/include/QT6TEST/: qt6_test.hpp
QT6/QT6_Pro/src/: CMakeLists.txt  main.cpp
QT6/QT6_Pro/src/QT6TEST/: CMakeLists.txt
QT6/QT6_Pro/src/QT6TEST/src/: qt6_test.cpp
QT6/QT6_Template/: CMakeLists.txt  README-zh_CN.md
QT6/QT6_Template/script/: setup_vinci_emis.bash  vinci_emis
QT6/QT6_Template/src/: main.cpp
QT6/QT6_Template/src/QT6TEST/: CMakeLists.txt
QT6/QT6_Template/src/QT6TEST/form/: mywidget.ui
QT6/QT6_Template/src/QT6TEST/inc/: qt6_test.hpp
QT6/QT6_Template/src/QT6TEST/src/: qt6_test.cpp
